--- a/index.html
+++ b/index.html
@@ -8,6 +8,194 @@
     <title>Hot Gadget</title>
 </head>
 <body>
-    <h1>Hellow from hot gadget</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#product">Products</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#about">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact" >Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </div>
+    <div class="container carousel">
+        <h1>Carousel</h1>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row caro align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mackbook Pro</h1>
+                        <p>This is the best mackbook in the world.So every person buy the book</p>
+                        <button class="buy-now-button">Buy Now</button>
+                    </div>
+                    <div class="col-md-5">
+                        <img class="img-fluid" src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+               <div class="row caro align-items-center">
+                   <div class="col-md-7">
+                    <h1>Mackbook Pro</h1>
+                    <p>This is the best mackbook in the world.So every person buy the book</p>
+                    <button class="buy-now-button">Buy Now</button>
+                   </div>
+                   <div class="col-md-5">
+                    <img class="img-fluid" src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                   </div>
+               </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="row caro align-items-center">
+                      <div class="col-md-7">
+                        <h1>Best Gadget in the World</h1>
+                        <p>This is the best gadget in the world.So every person buy the book</p>
+                        <button class="buy-now-button">Buy Now</button>
+                      </div>
+                      <div class="col-md-5">
+                        <img class="img-fluid" src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                      </div>
+                  </div>
+               
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+    <div class="container" id="product">
+        <h1>Smart Phone</h1>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">iPhone 11 pro</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5>$820</h5>
+            </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Samsung Gallaxy pro</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <h5>$380</h5>
+            </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Redme 9</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5>$420</h5>
+            </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="container" id="about">
+        <h1>Laptop</h1>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Asus pro</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5>$899</h5>
+            </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Lenovo 250</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$850</h5>
+            </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">HP Pro</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5>$920</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="container" id="contact">
+        <h1 class="catagoris">Catagoris</h1>
+        <div class="under"></div>
+        <div class="row">
+            <div class="col-md-3 cat1">
+                <img src="images/Categories/bag.png" alt="">
+                <h4>Bag</h4>
+            </div>
+            <div class="col-md-3">
+               <div class="cat2 ">
+                <img src="images/Categories/perfume.png" alt="">
+                <h4>Beauty</h4>
+               </div>
+               <div class="cat2">
+                <img src="images/Categories/shoe.png" alt="">
+                <h4>Shose</h4>
+               </div>
+            </div>
+            <div class="col-md-6 cat3">
+                <img class="img-fluid" src="images/Categories/pale-order.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 </html>
